public/css/custom.css
.post > h1, .post > h2, .post > h3, .post > h4, .post > h5 {
	/*text-shadow: 3px 1px 10px rgba(0, 0, 0, 0.15);*/
	/*text-shadow: rgba(0, 0, 0, 0.15) 0px 1px 3px;*/
}


.post-title a {
	/*text-shadow: rgba(144, 169, 89, 0.5) 0px 1px 3px;*/
}

.post-title a:hover {
	text-decoration: none;
}

html {
	font-family: "Roboto", "PT Sans", Helvetica, Arial, sans-serif;
	font-size: 1.1em;
}

.post {
	line-height: 1.9em;
}

.shadowed {
    -webkit-filter: drop-shadow(12px 12px 25px rgba(0,0,0,0.5));
    filter: url(#drop-shadow);
    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
}

.post img {
	display: block;
	margin: auto;
}

/*
Zeno zeu ozeneu
*/
.post > h1,
.post > h2,
.post > h3,
.post > h4,
.post > h5 {
	font-family: "PT Sans", Helvetica, Arial, sans-serif;
	font-weight: 700;
}

.post > h1 {
	font-size: 2.8rem;
}

.post > h2 {
	font-size: 2.4rem; 
}

.post > h3 {
	font-size: 1.8rem; 
}

.post > h4 {
	font-size: 1.2rem; 
}

.post > h5 {
	font-size: 1.0rem; 
}

.post-title a:hover {
	background-image: linear-gradient(to bottom, #90a959 50%, #90a959 50%);
	background-repeat: repeat-x;
	background-size: 4px 4px;
	background-position: 0 91%;
	text-shadow: #fff -3px 0px 0px,
				#fff 3px 0px 0px,
				#fff 0px 3px 0px,
				#fff 0px -3px 0px,
				#fff -3px -3px 0px,
				#fff 3px -3px 0px,
				#fff 3px 3px 0px,
				#fff -3px 3px 0px;
}

code {
	word-wrap: normal;
	white-space: pre;
}

